@@ -46,8 +46,8 @@ int progress_line_length = 0;
 
 object_path *paths = NULL;
 
-wchar_t in_filter[MAX_ENV_VARIABLE_LENGTH + 1];
-wchar_t new_in_filter[MAX_ENV_VARIABLE_LENGTH + 1];
+wchar_t orig_cut_filter[MAX_ENV_VARIABLE_LENGTH + 1];
+wchar_t cut_filter[MAX_ENV_VARIABLE_LENGTH + 1];
 wchar_t aux_buffer[MAX_ENV_VARIABLE_LENGTH + 1];
 wchar_t aux_buffer2[MAX_ENV_VARIABLE_LENGTH + 1];
 
@@ -417,22 +417,22 @@ int udefrag_handler(int argc,wchar_t **argv,wchar_t **envp)
             /* extract drive letter */
             letter = (char)path->path[0];
             
-            /* save %UD_IN_FILTER% */
-            in_filter[0] = 0;
-            if(winx_query_env_variable(L"UD_IN_FILTER",in_filter,MAX_ENV_VARIABLE_LENGTH + 1) < 0){
+            /* save %UD_CUT_FILTER% */
+            orig_cut_filter[0] = 0;
+            if(winx_query_env_variable(L"UD_CUT_FILTER",orig_cut_filter,MAX_ENV_VARIABLE_LENGTH + 1) < 0){
                 /*if(GetLastError() != ERROR_ENVVAR_NOT_FOUND)
-                    winx_printf("udefrag_handler: cannot get %%UD_IN_FILTER%%!");
+                    winx_printf("udefrag_handler: cannot get %%UD_CUT_FILTER%%!");
                 */
             }
             
-            /* save the current path to %UD_IN_FILTER% */
-            n = _snwprintf(new_in_filter,MAX_ENV_VARIABLE_LENGTH + 1,L"%ls",path->path);
+            /* save the current path to %UD_CUT_FILTER% */
+            n = _snwprintf(cut_filter,MAX_ENV_VARIABLE_LENGTH + 1,L"%ls",path->path);
             if(n < 0){
-                winx_printf("Cannot set %%UD_IN_FILTER%% - path is too long!\n");
-                wcscpy(new_in_filter,in_filter);
+                winx_printf("Cannot set %%UD_CUT_FILTER%% - path is too long!\n");
+                wcscpy(cut_filter,L"");
                 path_found = 0;
             } else {
-                new_in_filter[MAX_ENV_VARIABLE_LENGTH] = 0;
+                cut_filter[MAX_ENV_VARIABLE_LENGTH] = 0;
             }
             
             /* search for another paths with the same drive letter */
@@ -440,10 +440,10 @@ int udefrag_handler(int argc,wchar_t **argv,wchar_t **envp)
                 if(another_path == paths) break;
                 if(winx_toupper(letter) == winx_toupper((char)another_path->path[0])){
                     /* try to append it to %UD_IN_FILTER% */
-                    n = _snwprintf(aux_buffer,MAX_ENV_VARIABLE_LENGTH + 1,L"%ls;%ls",new_in_filter,another_path->path);
+                    n = _snwprintf(aux_buffer,MAX_ENV_VARIABLE_LENGTH + 1,L"%ls;%ls",cut_filter,another_path->path);
                     if(n >= 0){
                         aux_buffer[MAX_ENV_VARIABLE_LENGTH] = 0;
-                        wcscpy(new_in_filter,aux_buffer);
+                        wcscpy(cut_filter,aux_buffer);
                         path_found = 1;
                         winx_printf("%ls\n",another_path->path);
                         another_path->processed = 1;
@@ -451,10 +451,10 @@ int udefrag_handler(int argc,wchar_t **argv,wchar_t **envp)
                 }
             }
             
-            /* set %UD_IN_FILTER% */
+            /* set %UD_CUT_FILTER% */
             if(abort_flag) goto done;
-            if(winx_set_env_variable(L"UD_IN_FILTER",new_in_filter) < 0){
-                winx_printf("Cannot set %%UD_IN_FILTER%%!\n");
+            if(winx_set_env_variable(L"UD_CUT_FILTER",cut_filter) < 0){
+                winx_printf("Cannot set %%UD_CUT_FILTER%%!\n");
             }
             
             /* run the job */
@@ -463,13 +463,10 @@ int udefrag_handler(int argc,wchar_t **argv,wchar_t **envp)
                 if(debug_level > DBG_NORMAL) short_dbg_delay();
             }
             
-            /* restore %UD_IN_FILTER% */
-            if(in_filter[0])
-                result = winx_set_env_variable(L"UD_IN_FILTER",in_filter);
-            else
-                result = winx_set_env_variable(L"UD_IN_FILTER",NULL);
+            /* restore %UD_CUT_FILTER% */
+            result = winx_set_env_variable(L"UD_CUT_FILTER",orig_cut_filter);
             if(result < 0){
-                winx_printf("Cannot restore %%UD_IN_FILTER%%!\n");
+                winx_printf("Cannot restore %%UD_CUT_FILTER%%!\n");
             }
         }
         if(path->next == paths) break;
